force-app/main/default/objects/User/fields/Assigned_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Lead_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assigned Lead Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>