force-app/main/default/objects/User/fields/Assignment_order__c.field-meta.xml
<CustomField>
    <fullName>Assignment_order__c</fullName>
    <label>Assignment order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>