force-app/main/default/objects/User/fields/Next_Available_for_Assingment__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_for_Assingment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Available for Assingment</label>
    <type>Checkbox</type>
</CustomField>