force-app/main/default/objects/User/fields/Schedule_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Color_Code__c</fullName>
    <label>Schedule Color Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>