force-app/main/default/objects/User/fields/Schedule_Texted_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Texted_Color_Code__c</fullName>
    <label>Schedule Texted Color Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>