force-app/main/default/objects/User/fields/Service_Writer_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Service_Writer_Bonus__c</fullName>
    <label>Service Writer Bonus</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>