force-app/main/default/objects/User/fields/StoreLocationWithRole__c.field-meta.xml
<CustomField>
    <fullName>StoreLocationWithRole__c</fullName>
    <formula>TEXT(Store_Location__c) &amp;  UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StoreLocationWithRole</label>
    <type>Text</type>
</CustomField>