force-app/main/default/objects/User/fields/Tech_Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Tech_Base_Pay__c</fullName>
    <label>Tech Base Pay</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>