force-app/main/default/objects/User/fields/Tech_Pay_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Tech_Pay_Multiplier__c</fullName>
    <label>Tech Pay Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>