force-app/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Assigned_Lead_Count__c</columns>
    <columns>Next_Available_for_Assingment__c</columns>
    <columns>Assignment_order__c</columns>
    <columns>StoreLocationWithRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
</ListView>