force-app/main/default/objects/User/listViews/Round_Robin_View.listView-meta.xml
<ListView>
    <fullName>Round_Robin_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Assignment_order__c</columns>
    <columns>Next_Available_for_Assingment__c</columns>
    <columns>Store_Location__c</columns>
    <columns>StoreLocationWithRole__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Round Robin View</label>
</ListView>